# DATA2410-oblig-3

./: .gitignore  Cargo.toml  README.md  compose.yaml  flake.nix  test.http
migrations/: 1_student.sql
modules/: process-compose.nix
src/: main.rs
