[package]
name = "data2410-oblig-3"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "macros", "migrate", "runtime-tokio"] }
tokio = { version = "1.52.0", features = ["full"] }
